--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "2.1.4",
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
+  "type": "module",
   "scripts": {
     "coveralls": "cat ./test/reports/lcov.info | coveralls",
     "pretest": "eslint lib/**",
     "test": "istanbul cover --report lcov --dir test/reports/ _mocha --recursive ./test/spec --grep ./test/**/*.spec.js -- --colors --reporter spec",
+    "test:debug": "node --inspect-brk=0.0.0.0:9230 node_modules/.bin/istanbul cover --report lcov --dir test/reports/ _mocha --recursive ./test/spec --grep ./test/**/*.spec.js -- --colors --reporter spec",
     "postversion": "git push upstream && git push --tags upstream"
   },
   "keywords": [
@@ -27,20 +29,18 @@
     "node": ">=4"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "coveralls": "^3.0.2",
-    "eslint": "^3.12.2",
-    "eslint-config-sparkpost": "1.3.1",
+    "chai": "^5.1.1",
+    "chai-as-promised": "^8.0.0",
+    "coveralls": "^3.1.1",
+    "eslint-config-sparkpost": "3.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
-    "nock": "^9.0.0",
-    "sinon": "^1.17.5",
-    "sinon-as-promised": "^4.0.2",
-    "sinon-chai": "^2.8.0"
+    "mocha": "^10.7.3",
+    "nock": "^14.0.0-beta.11",
+    "sinon": "^18.0.0",
+    "sinon-chai": "^4.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.2",
-    "request": "^2.79.0"
+    "lodash": "^4.17.21",
+    "tough-cookie": "^4.1.4"
   }
 }
